fix overlapping elements

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,36 +19,36 @@ body {
   height: 100%; /* needed for proper layout */
 }
 
-html {
-  overflow: hidden;
-}
-
 body {
-  display: flex;
+  overflow: hidden; /*makes the body non-scrollable (we will add scrolling to the sidebar and main content containers)*/
+  display: flex; /*enables flex content for its children*/
+  // box-sizing: border-box;
   flex-direction: column;
-  margin: 0;
+  font-family: "Nunito Sans", sans-serif !important;
+  justify-content: space-between;
 }
 
 nav {
   background-color: #f3f3f4;
   height: 120px;
-  font-family: "Nunito Sans", sans-serif !important;
   font-size: 14px;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  flex: 0 0 auto;
+  flex-shrink: 0;
+  padding: 0 15%;
 }
 
 main {
-  padding: 2% 15%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  font-family: "Nunito Sans", sans-serif !important;
-  flex: 1 1 auto;
-  position: relative;
+  flex-grow: 1;
   overflow-y: auto;
+  justify-content: space-between;
+  padding: 0 15% 5% 15%;
+  height: 100%;
+  text-align: center;
 }
 
 ::-webkit-scrollbar {
@@ -57,7 +57,6 @@ main {
 }
 
 .nav-container {
-  margin: 0 15% 0 15%;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -235,6 +234,7 @@ it was modified from https://www.w3schools.com/bootstrap/bootstrap_carousel.asp 
 
 .links {
   text-align: center;
+  min-height: 100px;
 }
 
 .links a {
@@ -255,16 +255,11 @@ form-table {
   text-align: center;
 }
 
-.form-section {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
 form {
   display: flex;
   flex-direction: column;
   align-items: center;
+  flex-shrink: 0;
 }
 
 .field {
